Fix select styling issues on Safari

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,19 @@
 @font-face {
-  font-family: "Heebo", sans-serif;
+  font-family: "Heebo";
   src: url(./fonts/Heebo-Bold.woff2) format("woff2");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Heebo", sans-serif;
+  font-family: "Heebo";
   src: url(./fonts/Heebo-Light.woff2) format("woff2");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Yantramanav", sans-serif;
+  font-family: "Yantramanav";
   src: url(./fonts/Yantramanav-Bold.woff2) format("woff2");
   font-weight: 700;
   font-style: normal;
@@ -158,6 +158,13 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
+}
+
+/* Safari */
+select.input {
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: transparent;
 }
 
 .input::placeholder,
